# amll-ttml-tool-cpp

./: .clang-format  CMakeLists.txt  README.md
src/: Global.hpp  Main.cpp  MainWindow.cpp  MainWindow.hpp  TTMLLyric.cpp  TTMLLyric.hpp
